frontend/tests/cases/negative/security/nonInterfSec.gr.output
Type checking failed: 
Grading error: frontend/tests/cases/negative/security/nonInterfSec.gr:5:1:
Public is not approximatable by Private for type Sec

Falsifiable theorem: frontend/tests/cases/negative/security/nonInterfSec.gr:8:1:
  When checking `extract`, (1 : Sec) is not approximatable by Private for type Sec